// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabsContext renders correctly with activeTabId 1`] = `
<div
  className="tabs-context--wrapper"
  data-testid="tabs-context"
  id=""
>
  <div
    className="tabsWrapper tabs--wrapper Compact Compact"
    data-testid="tab-list"
    id=""
  >
    <ul
      className="tabsList tabs-list"
      role="tablist"
      tabIndex={0}
    >
      <li
        aria-disabled={false}
        aria-selected={false}
        className="tabWrapper tab--wrapper"
        data-testid="tab"
        id=""
        role="tab"
      >
        <a
          className="tabInner tab-inner"
          onClick={[Function]}
        >
          First
        </a>
      </li>
      <li
        aria-disabled={false}
        aria-selected={true}
        className="tabWrapper tab--wrapper active"
        data-testid="tab"
        id=""
        role="tab"
      >
        <a
          className="tabInner tab-inner"
          onClick={[Function]}
        >
          Second
        </a>
      </li>
    </ul>
  </div>
  <div
    className="tabPanelsWrapper tab-panels--wrapper"
    data-testid="tab-panels"
    id=""
  >
    <div
      className="tabPanelWrapper tab-panel--wrapper tabPanel tab-panel non-active"
      data-testid="tab-panel"
      id=""
      role="tabpanel"
    >
      First slide
    </div>
    <div
      className="tabPanelWrapper tab-panel--wrapper tabPanel tab-panel active active animationDirectionRtl animation-direction-rtl"
      data-testid="tab-panel"
      id=""
      role="tabpanel"
    >
      Second slide
    </div>
  </div>
</div>
`;

exports[`TabsContext renders correctly with className 1`] = `
<div
  className="tabs-context--wrapper test"
  data-testid="tabs-context"
  id=""
>
  <div
    className="tabsWrapper tabs--wrapper Compact Compact"
    data-testid="tab-list"
    id=""
  >
    <ul
      className="tabsList tabs-list"
      role="tablist"
      tabIndex={0}
    >
      <li
        aria-disabled={false}
        aria-selected={true}
        className="tabWrapper tab--wrapper active"
        data-testid="tab"
        id=""
        role="tab"
      >
        <a
          className="tabInner tab-inner"
          onClick={[Function]}
        >
          First
        </a>
      </li>
    </ul>
  </div>
  <div
    className="tabPanelsWrapper tab-panels--wrapper"
    data-testid="tab-panels"
    id=""
  >
    <div
      className="tabPanelWrapper tab-panel--wrapper tabPanel tab-panel active active animationDirectionRtl animation-direction-rtl"
      data-testid="tab-panel"
      id=""
      role="tabpanel"
    >
      First slide
    </div>
  </div>
</div>
`;

exports[`TabsContext renders correctly with empty props 1`] = `
<div
  className="tabs-context--wrapper"
  data-testid="tabs-context"
  id=""
>
  <div
    className="tabsWrapper tabs--wrapper Compact Compact"
    data-testid="tab-list"
    id=""
  >
    <ul
      className="tabsList tabs-list"
      role="tablist"
      tabIndex={0}
    >
      <li
        aria-disabled={false}
        aria-selected={true}
        className="tabWrapper tab--wrapper active"
        data-testid="tab"
        id=""
        role="tab"
      >
        <a
          className="tabInner tab-inner"
          onClick={[Function]}
        >
          First
        </a>
      </li>
    </ul>
  </div>
  <div
    className="tabPanelsWrapper tab-panels--wrapper"
    data-testid="tab-panels"
    id=""
  >
    <div
      className="tabPanelWrapper tab-panel--wrapper tabPanel tab-panel active active animationDirectionRtl animation-direction-rtl"
      data-testid="tab-panel"
      id=""
      role="tabpanel"
    >
      First slide
    </div>
  </div>
</div>
`;

exports[`TabsContext renders correctly with id 1`] = `
<div
  className="tabs-context--wrapper"
  data-testid="tabs-context_test"
  id="test"
>
  <div
    className="tabsWrapper tabs--wrapper Compact Compact"
    data-testid="tab-list"
    id=""
  >
    <ul
      className="tabsList tabs-list"
      role="tablist"
      tabIndex={0}
    >
      <li
        aria-disabled={false}
        aria-selected={true}
        className="tabWrapper tab--wrapper active"
        data-testid="tab"
        id=""
        role="tab"
      >
        <a
          className="tabInner tab-inner"
          onClick={[Function]}
        >
          First
        </a>
      </li>
    </ul>
  </div>
  <div
    className="tabPanelsWrapper tab-panels--wrapper"
    data-testid="tab-panels"
    id=""
  >
    <div
      className="tabPanelWrapper tab-panel--wrapper tabPanel tab-panel active active animationDirectionRtl animation-direction-rtl"
      data-testid="tab-panel"
      id=""
      role="tabpanel"
    >
      First slide
    </div>
  </div>
</div>
`;
